syntax = "proto3";


service Communicator{
	rpc FolderWebhookChanged (FolderWebhookRequest) returns (FolderWebhookResponse);
	rpc RecipientAddedToFolder (RecipientAddedRequest) returns (RecipientAddedResponse);
	rpc ProbeRecipient (ProbeRequest) returns (ProbeResponse);
	rpc GetBaseFolder (BaseFolderRequest) returns (BaseFolderResponse);
}

message FolderWebhookRequest{
	string folderId = 1;
	string webHookType = 2;
	string callBackUrl = 3;
}

message FolderWebhookResponse{

}

message RecipientAddedRequest{
	string folderId = 1;
	repeated string recipients = 2;
}

message RecipientAddedResponse{

}

message ProbeRequest{

}

message ProbeResponse{
	string machineName = 1;
}

message BaseFolderRequest{

}

message BaseFolderResponse{
	string path = 1;
}